fix layout issue with dashboard, login, register

--- a/client/src/components/Login/Login.scss
+++ b/client/src/components/Login/Login.scss
@@ -3,7 +3,7 @@
 .login-wrapper {
   background-image: url(https://media3.giphy.com/media/TKdRL0QMZKUZpnvssI/giphy.gif?cid=ecf05e47xp4amppvj50pde7gq8o73rm8calfujof1r62ttvu&rid=giphy.gif&ct=g);
   background-size: cover;
-  height: 775px;
+  height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
